--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder.js",
-    "data:destory": "node backend/seeder.js -d"
+    "data:destory": "node backend/seeder.js -d",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Vinay Jadhav",
   "license": "MIT",
